--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,5 +1,7 @@
 :root {
-    --dark-brown: #3E2C1C;
+    --dark-brown: #useEffect(() => {
+  AOS.refresh();
+}, [activeSubcategory]);;
     --tan: #A06D33;
     --gold: #D6AD60;
     --beige: #F8F5F2;
