--- a/src/components/styles/style.css
+++ b/src/components/styles/style.css
@@ -27,12 +27,12 @@ h2 {
 }
 
 .hero {
-    background: url('https://res.cloudinary.com/dekf5dyng/image/upload/v1749721392/jackson_vpica7.jpg') no-repeat center center/cover;
+    background: url('https://res.cloudinary.com/dekf5dyng/image/upload/v1758802036/Banner_tznhye.jpg') no-repeat center center/cover;
     background-attachment: fixed;
     height: 80vh;
     color: var(--beige);
     display: flex;
-    align-items: center;
+    align-items: end;
     justify-content: center;
     text-align: center;
     position: relative;
@@ -45,7 +45,7 @@ h2 {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(30, 20, 10, 0.6);
+    background: rgba(30, 20, 10, 0.4);
     z-index: 1;
 }
 
